--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "styled-components": "^5.2.1"
   }
 }
