--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,18 +7,25 @@
     "start": "webpack-dev-server --mode development"
   },
   "dependencies": {
+    "@monorepo/axios-config": "*",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-confirm-alert": "^2.6.2",
+    "react-dom": "^17.0.1",
+    "react-notifications": "^1.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
     "@pmmmwh/react-refresh-webpack-plugin": "pmmmwh/react-refresh-webpack-plugin",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "react-refresh": "^0.9.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.11.0",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "^3.11.0"
